--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^166.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
+    "jwks-rsa": "^3.2.1",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.1",
