--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@upstash/redis": "^1.34.3",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
